@@ -1,3 +1,10 @@
+2004-04-13  Bruno Haible  <bruno@clisp.org>
+
+	* clos-class2.lisp (finalize-instance-standard-class): Register this
+	class also as subclass of <standard-object>, even if <standard-object>
+	is not explicitly listed among the direct subclasses. Needed so
+	that (make-instances-obsolete 'standard-object) works.
+
 2004-04-26  Sam Steingold  <sds@gnu.org>
 
 	* loop.lisp (expand-loop): use FUNCTION-FORM-FUNFORM instead of
